# voice-remover

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml
.github/workflows/: publish.yml
app/: cli.py  config.py  inference.py  model.py
app/service/vocal_remover/: runner.py
