[tool.poetry]
name = "voice-remover"
version = "0.1.1"
description = "Local vocal removal / audio source separation"
authors = ["Felipe Infantino <felipe.infantino@icloud.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python  = ">=3.11,<3.15"
pydub   = "^0.25.1"
librosa = "^0.11.0"
resampy = "^0.4.3"

# torch & torchaudio are pulled in transitively by demucs.
# No explicit source: PyPI ships macOS (arm64 + x86_64) wheels natively.
# On Linux/Windows you can pin source = "pytorch-cpu" for the smaller CPU build.
torch      = "^2.10"
torchaudio = "^2.10"

huggingface-hub = "^0.23"

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------
# Default PyPI
tqdm = "^4.67.3"
[[tool.poetry.source]]
name     = "pypi"
priority = "primary"

# PyTorch CPU-only wheels (smaller, works everywhere).
# Swap the URL for a CUDA build if you need GPU locally:
#   https://download.pytorch.org/whl/cu121   (CUDA 12.1)
#   https://download.pytorch.org/whl/cu124   (CUDA 12.4)
[[tool.poetry.source]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# ---------------------------------------------------------------------------
# Scripts
# ---------------------------------------------------------------------------
[tool.poetry.scripts]
voice-remover = "app.cli:main"

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires      = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
